--- a/scss/vars.scss
+++ b/scss/vars.scss
@@ -1,5 +1,8 @@
-//variables de color
-$bgBody: #d8b691;
-$bgNavFooter: #c3784ff2;
-$fontColor: #4e2700;
-$colorHover: #fff;
+//Mapa de colores
+
+$colores:(
+    "bgBody": #d8b691,
+    "bgNavFooter": #c3784ff2,
+    "fontColor": #4e2700,
+    "colorHover": #fff
+)
