--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,6 +1,6 @@
 footer {
     height: fit-content;
-    background-color: $bgNavFooter;
+    background-color:map-get($colores, "bgNavFooter");
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,7 +29,7 @@ footer {
             }
 
             a {
-                color: $fontColor;
+                color:map-get($colores, "fontColor");
                 font-size: 20px;
                 text-decoration: none;
             }
