--- a/css/style.css
+++ b/css/style.css
@@ -9,31 +9,16 @@ nav {
     text-decoration: none; }
 
 footer {
-  height: fit-content;
-  background-color: #c3784ff2;
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-  footer .cajaFooter {
-    display: flex;
-    gap: 0.6rem; }
-    @media screen and (max-width: 800px) {
-      footer .cajaFooter {
-        flex-direction: column;
-        display: flex;
-        align-items: flex-start;
-        gap: 0; } }
-    footer .cajaFooter .cajita {
-      display: flex;
-      align-items: center;
-      gap: 0.3rem; }
-      footer .cajaFooter .cajita .imgFooter {
-        height: 4vh;
-        width: 4vh; }
-      footer .cajaFooter .cajita a {
-        color: #4e2700;
-        font-size: 20px;
-        text-decoration: none; }
+  background-color: #c3784ff2; }
+  footer a,
+  footer h6,
+  footer p {
+    color: #4e2700; }
+    footer a .icFooter,
+    footer h6 .icFooter,
+    footer p .icFooter {
+      height: 4vh;
+      width: 4vh; }
 
 .cTxt {
   width: 100%;
@@ -63,29 +48,14 @@ footer {
   .marg img {
     width: 100%; }
 
-.cTxt {
-  width: 94%;
-  margin: 3%;
-  height: 30vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; }
-  .cTxt .txt {
-    margin-bottom: 1%; }
-
 .mapas {
-  width: 92%;
-  margin: 4%;
-  height: 30vh; }
+  height: 40vh; }
 
 .card {
   background-color: rgba(0, 255, 255, 0); }
 
 #carouselReservas .carousel-item {
-  height: 53vh; }
-  #carouselReservas .carousel-item img {
-    height: 50vh; }
+  height: 60vh; }
 
 body {
   font-family: "Alegreya SC", serif;
